asycn y defer para el Index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/generalStyle.css" />
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/main.js" async defer></script>
     <title>Preguntas y Respuestas Sofka</title>
   </head>
   <body>
